data/Java/14-use-uninitialized-primary-variable/6/[M]Error.txt
https://www.dreamincode.net/forums/topic/94196-local-variable-may-not-have-been-initialized/
Main.java:14: error: variable col might not have been initialized
        board[row][col] = ch;
                   ^